# octetos-cave

./: .gitignore  Makefile.am  cave-v0.cbp  cave-v1.cbp  cave-v1.workspace  configure.ac  octetos-cave-mmsql.sln  octetos-cave.cbp  octetos-cave.sln  tests-v0.sln
0/: base.cc  base.hh  db.config.txt  maria.hh  mmsql.cc  mmsql.hh  schema.hh
1/: Program.cc  Program.hh  base.cc  base.hh  main-cave.cc  maria.hh  mmsql.cc  mmsql.hh  mysql.hh
octetos-cave/: octetos-cave.vcxproj
octetos-cave-mmsql/: octetos-cave-mmsql.vcxproj  octetos-cave-mmsql.vcxproj.filters
po/: POTFILES.in  en.po  es.po
src/: Makefile.am  base.cc  base.hh  client-maria.cc  client.cc  client.hh  main-cave.cc  main.cc  maria.cc  maria.hh  mmsql.cc  mmsql.hh  mysql.cc  mysql.hh  oct-core.hh  schema.cc  schema.hh
src - copia/: base.cc  base.hh  main.cc  maria.hh  mmsql.cc  mysql.hh  schema.cc  schema.hh
tests/: Makefile.am  config  config-cave  config-dev  config-root  main.cc  v0-maria.cc  v0-mmsql.cc  v0-schema.cc  v0.cc  v0.hh  v1-mmsql.cc  v1.cc  v1.hh
tests - copia/: main.cc  v0-mmsql.cc  v0.cc  v0.hh
tests-v0/: tests-v0.vcxproj  tests-v0.vcxproj.filters
tests-v0/mariadb.pkg/: create-x.sql  database.sql  default-data.sql  muposys-full.mpk  sales.sql
tests/package/: base.sql  create.sql  database.sql  default-data-1.sql  fabric.sql  http.sql  muposys-1.ocpk  muposys.ocpk  ocpk  stock.sql  user-mang.sql
