
check_PROGRAMS = v0
TESTS= $(check_PROGRAMS)

LIBS = $(OCTETOS_CAVE_BASE_LIBS) $(CUNIT_LIBS)
FLAGS = $(OCTETOS_CAVE_BASE_FLAGS) $(CUNIT_FLAGS) -I$(top_builddir)
if DATABASE_ENGINE_MARIA
FLAGS += -DDATABASE_ENGINE_MARIA
endif
if OCTEOTOS_CAVE_ENABLE_TDD
FLAGS += -DOCTEOTOS_CAVE_ENABLE_TDD -DOCTEOTOS_CAVE_ENABLE_TDD_V0
endif

v0_LDFLAGS =
v0_LDADD = $(LIBS) 
v0_CXXFLAGS = $(FLAGS) -I$(top_builddir) -I$(top_srcdir)
v0_SOURCES = main.cc v0.cc
